Fix code block overflow

--- a/styles/generic.markdown-preview-plus.less
+++ b/styles/generic.markdown-preview-plus.less
@@ -45,5 +45,6 @@ markdown-preview-plus-view {
 
   atom-text-editor {
     flex-direction: column;
+    overflow: auto;
   }
 }
